--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,8 +3,8 @@
             <title>Django Boy blog</title>
         </head>
         <body>
-            <div>
-        <h1><a href="/">Django Girls Blog</a></h1>
+              <div>
+        <h1><a href="/">Django Boy Blog</a></h1>
     </div>
 
     {% for post in posts %}
