--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,8 +12,12 @@
             <div class="page-header">
             {% if user.is_authenticated %}
                <a href="{% url 'blog.views.post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+               <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+               <p class="top-menu">Hello {{ user.username }}<small>(<a href="{% url 'django.contrib.auth.views.logout' %}">Log out</a>)</small></p>
+            {% else %}
+            <a href="{% url 'django.contrib.auth.views.login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
             {% endif %}
-            <h1><a href="/">Django Boys Blog</a></h1>
+            <h1><a href="{% url 'blog.views.post_list' %}">Django Boy Blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
@@ -22,6 +26,6 @@
                 {% endblock %}
                 </div>
             </div>
-        </div>
+          </div>
         </body>
     </html>
